WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215123
SWServerJobQueue::didResolveRegistrationPromise should not assume its registration key relates to an existing worker
https://bugs.webkit.org/show_bug.cgi?id=215123
Summary
SWServerJobQueue::didResolveRegistrationPromise should not assume its registr...
youenn fablet
Reported
2020-08-04 04:31:44 PDT
SWServerJobQueue::didResolveRegistrationPromise should not assume its registration key relates to an existing worker
Attachments
Patch
(3.07 KB, patch)
2020-08-04 04:46 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-08-04 04:41:18 PDT
<
rdar://problem/65096786
>
youenn fablet
Comment 2
2020-08-04 04:46:49 PDT
Created
attachment 405913
[details]
Patch
Geoffrey Garen
Comment 3
2020-08-04 08:56:57 PDT
Comment on
attachment 405913
[details]
Patch Can you add a test for this?
youenn fablet
Comment 4
2020-08-05 01:30:11 PDT
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 405913
[details]
> Patch > > Can you add a test for this?
I tried but this is difficult since this is very time dependent.
EWS
Comment 5
2020-08-05 01:33:40 PDT
Committed
r265282
: <
https://trac.webkit.org/changeset/265282
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 405913
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug